@@ -62,7 +62,7 @@ import org.labkey.api.pipeline.file.PathMapper;
 import org.labkey.api.pipeline.file.PathMapperImpl;
 import org.labkey.api.pipeline.trigger.PipelineTriggerRegistry;
 import org.labkey.api.pipeline.trigger.PipelineTriggerType;
-import org.labkey.api.reports.report.RReport;
+import org.labkey.api.reports.report.r.RReport;
 import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.JunitUtil;
 import org.labkey.api.util.MinorConfigurationException;
@@ -95,13 +95,12 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.regex.Matcher;
-import java.util.stream.Collectors;
 
 public class PipelineJobServiceImpl implements PipelineJobService
 {
     public static final String MODULE_PIPELINE_DIR = "pipeline";
 
-    private static final Logger LOG = LogManager.getLogger(PipelineJobServiceImpl.class);
+    public static final Logger LOG = LogManager.getLogger(PipelineJobServiceImpl.class);
     private static final String PIPELINE_TOOLS_ERROR = "Failed to locate %s. Use the site pipeline tools settings to specify where it can be found. (Currently '%s')";
     private static final String INSTALLED_PIPELINE_TOOL_ERROR = "Failed to locate %s. Check tool install location defined in pipelineConfig.xml. (Currently '%s')";
     private static final String MODULE_TASKS_DIR = "tasks";
@@ -149,8 +148,8 @@ public class PipelineJobServiceImpl implements PipelineJobService
     private final Map<TaskId, TaskFactory<?>> _taskFactoryStore;
     private final Map<SchemaType, XMLBeanTaskFactoryFactory> _taskFactoryFactories;
 
-    private static final ModuleResourceCache<Map<TaskId, TaskFactory<?>>> TASK_FACTORY_CACHE = ModuleResourceCaches.create("TaskFactory cache", new TaskFactoryCacheHandler(), ResourceRootProvider.getStandard(new Path(MODULE_PIPELINE_DIR, MODULE_TASKS_DIR)));
-    private static final ModuleResourceCache<Map<TaskId, TaskPipeline<?>>> TASK_PIPELINE_CACHE = ModuleResourceCaches.create("TaskPipeline cache", new TaskPipelineCacheHandler(), ResourceRootProvider.getStandard(new Path(MODULE_PIPELINE_DIR, MODULE_PIPELINES_DIR)));
+    private static final ModuleResourceCache<Map<TaskId, TaskFactory<?>>> TASK_FACTORY_CACHE = ModuleResourceCaches.create("Pipeline task factories", new TaskFactoryCacheHandler(), ResourceRootProvider.getStandard(new Path(MODULE_PIPELINE_DIR, MODULE_TASKS_DIR)));
+    private static final ModuleResourceCache<Map<TaskId, TaskPipeline<?>>> TASK_PIPELINE_CACHE = ModuleResourceCaches.create("Task pipelines", new TaskPipelineCacheHandler(), ResourceRootProvider.getStandard(new Path(MODULE_PIPELINE_DIR, MODULE_PIPELINES_DIR)));
 
     private String _defaultExecutionLocation = TaskFactory.WEBSERVER;
     private int _defaultAutoRetry = 0;
@@ -361,7 +360,7 @@ public class PipelineJobServiceImpl implements PipelineJobService
     {
         synchronized (_taskFactoryStore)
         {
-            TaskFactory factory = _taskFactoryStore.get(id);
+            TaskFactory<?> factory = _taskFactoryStore.get(id);
             if (factory != null)
                 return factory;
         }
@@ -424,8 +423,7 @@ public class PipelineJobServiceImpl implements PipelineJobService
         synchronized (_taskFactoryStore)
         {
             factories.addAll(_taskFactoryStore.values().stream()
-                .filter(factory -> module.equals(factory.getDeclaringModule()))
-                .collect(Collectors.toList()));
+                    .filter(factory -> module.equals(factory.getDeclaringModule())).toList());
         }
 
         factories.addAll(TASK_FACTORY_CACHE.getResourceMap(module).values());
@@ -547,7 +545,7 @@ public class PipelineJobServiceImpl implements PipelineJobService
     public FormSchema getFormSchema(Container container)
     {
         List<Option<String>> typeOptions = new ArrayList<>();
-        for (PipelineTriggerType pipelineTriggerType : PipelineTriggerRegistry.get().getTypes())
+        for (PipelineTriggerType<?> pipelineTriggerType : PipelineTriggerRegistry.get().getTypes())
         {
             typeOptions.add(new Option<>(pipelineTriggerType.getName(), pipelineTriggerType.getName()));
         }
@@ -563,8 +561,7 @@ public class PipelineJobServiceImpl implements PipelineJobService
                 .filter(FileAnalysisTaskPipeline.class::isInstance)
                 .map(FileAnalysisTaskPipeline.class::cast)
                 .filter(FileAnalysisTaskPipeline::isAllowForTriggerConfiguration)
-                .sorted((tp1, tp2) -> tp1.getDescription().compareToIgnoreCase(tp2.getDescription()))
-                .collect(Collectors.toList());
+                .sorted((tp1, tp2) -> tp1.getDescription().compareToIgnoreCase(tp2.getDescription())).toList();
 
         for (FileAnalysisTaskPipeline task : tasks)
             taskOptions.add(new Option<>(task.getId().toString(), task.getDescription()));
@@ -576,7 +573,7 @@ public class PipelineJobServiceImpl implements PipelineJobService
         String usernameHref = baseHref + "runasusername";
         String assayProviderHref = baseHref + "assayprovider";
 
-        List<Field> fields = List.of(
+        List<Field<?>> fields = List.of(
                 new TextField("name", "Name", null, true, ""),
                 new TextareaField("description", "Description", null, false, ""),
                 new SelectField<>("type", "Type", null, true, typeDefaultValue, typeOptions),
@@ -906,10 +903,9 @@ public class PipelineJobServiceImpl implements PipelineJobService
         if (provider == null)
             throw new NotFoundException("No pipeline provider found for task pipeline: " + taskPipeline);
 
-        if (!(taskPipeline instanceof FileAnalysisTaskPipeline))
+        if (!(taskPipeline instanceof FileAnalysisTaskPipeline fatp))
             throw new NotFoundException("Task pipeline is not a FileAnalysisTaskPipeline: " + taskPipeline);
 
-        FileAnalysisTaskPipeline fatp = (FileAnalysisTaskPipeline)taskPipeline;
         //noinspection unchecked
         return provider.getProtocolFactory(fatp);
     }
